--- a/Module 2/jupyter-labs-eda-sql-coursera_sqllite-bak_lab4.ipynb
+++ b/Module 2/jupyter-labs-eda-sql-coursera_sqllite-bak_lab4.ipynb
@@ -99,7 +99,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -111,8 +111,7 @@
       "Collecting prettytable (from ipython-sql)\n",
       "  Downloading prettytable-3.10.2-py3-none-any.whl.metadata (30 kB)\n",
       "Requirement already satisfied: ipython in /opt/conda/lib/python3.11/site-packages (from ipython-sql) (8.22.2)\n",
-      "Collecting sqlalchemy>=2.0 (from ipython-sql)\n",
-      "  Downloading SQLAlchemy-2.0.31-cp311-cp311-manylinux_2_17_x86_64.manylinux2014_x86_64.whl.metadata (9.6 kB)\n",
+      "Requirement already satisfied: sqlalchemy>=2.0 in /opt/conda/lib/python3.11/site-packages (from ipython-sql) (2.0.30)\n",
       "Collecting sqlparse (from ipython-sql)\n",
       "  Downloading sqlparse-0.5.1-py3-none-any.whl.metadata (3.9 kB)\n",
       "Requirement already satisfied: six in /opt/conda/lib/python3.11/site-packages (from ipython-sql) (1.16.0)\n",
@@ -134,17 +133,11 @@
       "Requirement already satisfied: asttokens>=2.1.0 in /opt/conda/lib/python3.11/site-packages (from stack-data->ipython->ipython-sql) (2.4.1)\n",
       "Requirement already satisfied: pure-eval in /opt/conda/lib/python3.11/site-packages (from stack-data->ipython->ipython-sql) (0.2.2)\n",
       "Downloading ipython_sql-0.5.0-py3-none-any.whl (20 kB)\n",
-      "Downloading SQLAlchemy-2.0.31-cp311-cp311-manylinux_2_17_x86_64.manylinux2014_x86_64.whl (3.2 MB)\n",
-      "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m3.2/3.2 MB\u001b[0m \u001b[31m87.5 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m:00:01\u001b[0m\n",
-      "\u001b[?25hDownloading prettytable-3.10.2-py3-none-any.whl (28 kB)\n",
+      "Downloading prettytable-3.10.2-py3-none-any.whl (28 kB)\n",
       "Downloading sqlparse-0.5.1-py3-none-any.whl (44 kB)\n",
-      "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m44.2/44.2 kB\u001b[0m \u001b[31m6.4 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
-      "\u001b[?25hInstalling collected packages: sqlparse, sqlalchemy, prettytable, ipython-sql\n",
-      "  Attempting uninstall: sqlalchemy\n",
-      "    Found existing installation: SQLAlchemy 1.3.9\n",
-      "    Uninstalling SQLAlchemy-1.3.9:\n",
-      "      Successfully uninstalled SQLAlchemy-1.3.9\n",
-      "Successfully installed ipython-sql-0.5.0 prettytable-3.10.2 sqlalchemy-2.0.31 sqlparse-0.5.1\n"
+      "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m44.2/44.2 kB\u001b[0m \u001b[31m3.7 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+      "\u001b[?25hInstalling collected packages: sqlparse, prettytable, ipython-sql\n",
+      "Successfully installed ipython-sql-0.5.0 prettytable-3.10.2 sqlparse-0.5.1\n"
      ]
     }
    ],
@@ -154,7 +147,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -163,7 +156,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -175,7 +168,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -184,7 +177,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -193,7 +186,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -202,7 +195,7 @@
        "101"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -218,6 +211,36 @@
    "metadata": {},
    "source": [
     "**Note:This below code is added to remove blank rows from table**\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      " * sqlite:///my_data1.db\n",
+      "Done.\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "[]"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#DROP THE TABLE IF EXISTS\n",
+    "\n",
+    "%sql DROP TABLE IF EXISTS SPACEXTABLE;"
    ]
   },
   {
@@ -240,36 +263,6 @@
       ]
      },
      "execution_count": 8,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "#DROP THE TABLE IF EXISTS\n",
-    "\n",
-    "%sql DROP TABLE IF EXISTS SPACEXTABLE;"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      " * sqlite:///my_data1.db\n",
-      "Done.\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "[]"
-      ]
-     },
-     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -299,7 +292,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -339,7 +332,7 @@
        "[('CCAFS LC-40',), ('VAFB SLC-4E',), ('KSC LC-39A',), ('CCAFS SLC-40',)]"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -361,7 +354,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -378,43 +371,97 @@
        "<table>\n",
        "    <thead>\n",
        "        <tr>\n",
+       "            <th>Date</th>\n",
+       "            <th>Time (UTC)</th>\n",
+       "            <th>Booster_Version</th>\n",
        "            <th>Launch_Site</th>\n",
+       "            <th>Payload</th>\n",
+       "            <th>PAYLOAD_MASS__KG_</th>\n",
+       "            <th>Orbit</th>\n",
+       "            <th>Customer</th>\n",
+       "            <th>Mission_Outcome</th>\n",
+       "            <th>Landing_Outcome</th>\n",
        "        </tr>\n",
        "    </thead>\n",
        "    <tbody>\n",
        "        <tr>\n",
+       "            <td>2010-06-04</td>\n",
+       "            <td>18:45:00</td>\n",
+       "            <td>F9 v1.0  B0003</td>\n",
        "            <td>CCAFS LC-40</td>\n",
+       "            <td>Dragon Spacecraft Qualification Unit</td>\n",
+       "            <td>0</td>\n",
+       "            <td>LEO</td>\n",
+       "            <td>SpaceX</td>\n",
+       "            <td>Success</td>\n",
+       "            <td>Failure (parachute)</td>\n",
        "        </tr>\n",
        "        <tr>\n",
+       "            <td>2010-12-08</td>\n",
+       "            <td>15:43:00</td>\n",
+       "            <td>F9 v1.0  B0004</td>\n",
        "            <td>CCAFS LC-40</td>\n",
+       "            <td>Dragon demo flight C1, two CubeSats, barrel of Brouere cheese</td>\n",
+       "            <td>0</td>\n",
+       "            <td>LEO (ISS)</td>\n",
+       "            <td>NASA (COTS) NRO</td>\n",
+       "            <td>Success</td>\n",
+       "            <td>Failure (parachute)</td>\n",
        "        </tr>\n",
        "        <tr>\n",
+       "            <td>2012-05-22</td>\n",
+       "            <td>7:44:00</td>\n",
+       "            <td>F9 v1.0  B0005</td>\n",
        "            <td>CCAFS LC-40</td>\n",
+       "            <td>Dragon demo flight C2</td>\n",
+       "            <td>525</td>\n",
+       "            <td>LEO (ISS)</td>\n",
+       "            <td>NASA (COTS)</td>\n",
+       "            <td>Success</td>\n",
+       "            <td>No attempt</td>\n",
        "        </tr>\n",
        "        <tr>\n",
+       "            <td>2012-10-08</td>\n",
+       "            <td>0:35:00</td>\n",
+       "            <td>F9 v1.0  B0006</td>\n",
        "            <td>CCAFS LC-40</td>\n",
+       "            <td>SpaceX CRS-1</td>\n",
+       "            <td>500</td>\n",
+       "            <td>LEO (ISS)</td>\n",
+       "            <td>NASA (CRS)</td>\n",
+       "            <td>Success</td>\n",
+       "            <td>No attempt</td>\n",
        "        </tr>\n",
        "        <tr>\n",
+       "            <td>2013-03-01</td>\n",
+       "            <td>15:10:00</td>\n",
+       "            <td>F9 v1.0  B0007</td>\n",
        "            <td>CCAFS LC-40</td>\n",
+       "            <td>SpaceX CRS-2</td>\n",
+       "            <td>677</td>\n",
+       "            <td>LEO (ISS)</td>\n",
+       "            <td>NASA (CRS)</td>\n",
+       "            <td>Success</td>\n",
+       "            <td>No attempt</td>\n",
        "        </tr>\n",
        "    </tbody>\n",
        "</table>"
       ],
       "text/plain": [
-       "[('CCAFS LC-40',),\n",
-       " ('CCAFS LC-40',),\n",
-       " ('CCAFS LC-40',),\n",
-       " ('CCAFS LC-40',),\n",
-       " ('CCAFS LC-40',)]"
+       "[('2010-06-04', '18:45:00', 'F9 v1.0  B0003', 'CCAFS LC-40', 'Dragon Spacecraft Qualification Unit', 0, 'LEO', 'SpaceX', 'Success', 'Failure (parachute)'),\n",
+       " ('2010-12-08', '15:43:00', 'F9 v1.0  B0004', 'CCAFS LC-40', 'Dragon demo flight C1, two CubeSats, barrel of Brouere cheese', 0, 'LEO (ISS)', 'NASA (COTS) NRO', 'Success', 'Failure (parachute)'),\n",
+       " ('2012-05-22', '7:44:00', 'F9 v1.0  B0005', 'CCAFS LC-40', 'Dragon demo flight C2', 525, 'LEO (ISS)', 'NASA (COTS)', 'Success', 'No attempt'),\n",
+       " ('2012-10-08', '0:35:00', 'F9 v1.0  B0006', 'CCAFS LC-40', 'SpaceX CRS-1', 500, 'LEO (ISS)', 'NASA (CRS)', 'Success', 'No attempt'),\n",
+       " ('2013-03-01', '15:10:00', 'F9 v1.0  B0007', 'CCAFS LC-40', 'SpaceX CRS-2', 677, 'LEO (ISS)', 'NASA (CRS)', 'Success', 'No attempt')]"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "%sql SELECT Launch_Site FROM SPACEXTABLE WHERE Launch_Site LIKE 'CCA%' LIMIT 5;"
+    "%sql SELECT * FROM SPACEXTABLE WHERE Launch_Site LIKE 'CCA%' LIMIT 5;"
    ]
   },
   {
@@ -453,13 +500,13 @@
        "    </thead>\n",
        "    <tbody>\n",
        "        <tr>\n",
-       "            <td>48213</td>\n",
+       "            <td>45596</td>\n",
        "        </tr>\n",
        "    </tbody>\n",
        "</table>"
       ],
       "text/plain": [
-       "[(48213,)]"
+       "[(45596,)]"
       ]
      },
      "execution_count": 12,
@@ -468,7 +515,7 @@
     }
    ],
    "source": [
-    "%sql SELECT SUM(PAYLOAD_MASS__KG_) AS Total_Payload_Mass FROM SPACEXTABLE WHERE Customer LIKE 'NASA (CRS)%';"
+    "%sql SELECT SUM(PAYLOAD_MASS__KG_) AS Total_Payload_Mass FROM SPACEXTABLE WHERE Customer LIKE 'NASA (CRS)';"
    ]
   },
   {
@@ -507,13 +554,13 @@
        "    </thead>\n",
        "    <tbody>\n",
        "        <tr>\n",
-       "            <td>2534.6666666666665</td>\n",
+       "            <td>2928.4</td>\n",
        "        </tr>\n",
        "    </tbody>\n",
        "</table>"
       ],
       "text/plain": [
-       "[(2534.6666666666665,)]"
+       "[(2928.4,)]"
       ]
      },
      "execution_count": 13,
@@ -522,7 +569,7 @@
     }
    ],
    "source": [
-    "%sql SELECT AVG(PAYLOAD_MASS__KG_) AS Average_Payload_Mass FROM SPACEXTABLE WHERE Booster_Version LIKE 'F9 v1.1%'"
+    "%sql SELECT AVG(PAYLOAD_MASS__KG_) AS Average_Payload_Mass FROM SPACEXTABLE WHERE Booster_Version LIKE 'F9 v1.1'"
    ]
   },
   {
@@ -660,7 +707,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -708,7 +755,7 @@
        " ('Success (payload status unclear)', 1)]"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -885,7 +932,10 @@
     }
    ],
    "source": [
-    "%sql SELECT substr(Date, 6, 2) AS Month, Landing_Outcome, Booster_Version, Launch_Site FROM SPACEXTABLE WHERE substr(Date, 1, 4) = '2015' AND Landing_Outcome LIKE '%drone ship%' ORDER BY Month;"
+    "%%sql\n",
+    "SELECT substr(Date, 6, 2) AS Month, Landing_Outcome, Booster_Version, Launch_Site \n",
+    "FROM SPACEXTABLE WHERE substr(Date, 1, 4) = '2015' AND Landing_Outcome \n",
+    "LIKE 'Failure (drone ship%' ORDER BY Month;"
    ]
   },
   {
