--- a/Module 2/jupyter-labs-eda-sql-coursera_sqllite-bak_lab4.ipynb
+++ b/Module 2/jupyter-labs-eda-sql-coursera_sqllite-bak_lab4.ipynb
@@ -875,7 +875,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -911,22 +911,15 @@
        "            <td>F9 v1.1 B1015</td>\n",
        "            <td>CCAFS LC-40</td>\n",
        "        </tr>\n",
-       "        <tr>\n",
-       "            <td>06</td>\n",
-       "            <td>Precluded (drone ship)</td>\n",
-       "            <td>F9 v1.1 B1018</td>\n",
-       "            <td>CCAFS LC-40</td>\n",
-       "        </tr>\n",
        "    </tbody>\n",
        "</table>"
       ],
       "text/plain": [
        "[('01', 'Failure (drone ship)', 'F9 v1.1 B1012', 'CCAFS LC-40'),\n",
-       " ('04', 'Failure (drone ship)', 'F9 v1.1 B1015', 'CCAFS LC-40'),\n",
-       " ('06', 'Precluded (drone ship)', 'F9 v1.1 B1018', 'CCAFS LC-40')]"
+       " ('04', 'Failure (drone ship)', 'F9 v1.1 B1015', 'CCAFS LC-40')]"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -935,7 +928,7 @@
     "%%sql\n",
     "SELECT substr(Date, 6, 2) AS Month, Landing_Outcome, Booster_Version, Launch_Site \n",
     "FROM SPACEXTABLE WHERE substr(Date, 1, 4) = '2015' AND Landing_Outcome \n",
-    "LIKE 'Failure (drone ship%' ORDER BY Month;"
+    "LIKE 'Failure (drone ship)' ORDER BY Month;"
    ]
   },
   {
@@ -952,7 +945,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -1020,13 +1013,16 @@
        " ('Precluded (drone ship)', 1)]"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "%sql SELECT Landing_Outcome, COUNT(*) AS Count FROM SPACEXTABLE WHERE Date BETWEEN '2010-06-04' AND '2017-03-20' GROUP BY Landing_Outcome ORDER BY Count DESC;"
+    "%%sql \n",
+    "SELECT Landing_Outcome, COUNT(*) AS Count FROM SPACEXTABLE \n",
+    "WHERE Date BETWEEN '2010-06-04' AND '2017-03-20' \n",
+    "GROUP BY Landing_Outcome ORDER BY Count DESC;"
    ]
   },
   {
